# python-dandelion-eu

./: .gitignore  .travis.yml  pyproject.toml  requirements-dev.txt  setup.py
dandelion/: base.py  datagem.py
dandelion/cache/: base.py  file.py
docs/: conf.py
tests/: base.py  datagem.py  test_base.py  test_datagem.py  test_datatxt.py
tests/test_cache/: __init__.py  test_base.py  test_file.py
