[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = 'dandelion-eu'
description = 'Connect to the dandelion.eu API in a very pythonic way!'
authors = [{ name = 'SpazioDati s.r.l.', email = 'berardi@spaziodati.eu' }, ]
requires-python = ">=3.7"
dependencies = [
    "requests",
]
readme = "README.rst"
keywords = ['api', 'dandelion']
classifiers = [
    'Intended Audience :: Developers',
    'Topic :: Scientific/Engineering :: Artificial Intelligence',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Topic :: Text Processing :: Linguistic',
    'Natural Language :: English',
    'Natural Language :: Italian',
    'Natural Language :: Spanish',
    'Natural Language :: French',
    'Natural Language :: German',
    'Natural Language :: Russian',
    'Natural Language :: Portuguese',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
]
license = "GPLv2"
dynamic = ["version"]

[project.urls]
Homepage = 'https://github.com/giacbrd/python-dandelion-eu'
Downloads = 'https://github.com/giacbrd/python-dandelion-eu/tags'

[tool.setuptools]
packages = [
    'dandelion',
    'dandelion.cache',
]

[tool.setuptools.dynamic]
version = { attr = "dandelion.__version__" }

[tool.coverage.run]
branch = true
omit = ["**/test_*.py"]

[tool.coverage.report]
omit = [
    "*site-packages*",
    "*tests*",
    "*.tox*",
]
show_missing = true
exclude_lines = [
    "raise NotImplementedError",
    "pragma: no-coverage",
    "pragma: no cover",
]

[tool.pytest.ini_options]
norecursedirs = [
    ".*",
    "build",
    "dist",
    "{arch}",
    "*.egg",
    "venv",
    "requirements*",
    "lib",
    "node_modules",
]
python_files = "test*.py"
addopts = "--cov-report html --cov=dandelion"
env_files = [".env"]
